[gd_scene load_steps=8 format=3 uid="uid://cxpgo3b5e0xrm"]

[ext_resource type="ArrayMesh" uid="uid://jtfrwciu7c2t" path="res://Art/Objects/crateItem.obj" id="1"]
[ext_resource type="Script" path="res://Objects/OptionCrate.gd" id="2"]
[ext_resource type="PackedScene" path="res://UI/FasterButtonUI3D.tscn" id="3"]
[ext_resource type="PackedScene" path="res://UI/AdvanceTrainButtonUI3D.tscn" id="4"]

[sub_resource type="SphereShape3D" id="1"]
radius = 0.211781

[sub_resource type="SphereShape3D" id="2"]
radius = 0.216518

[sub_resource type="BoxShape3D" id="3"]
size = Vector3(0.154764, 0.14845, 0.1551)

[node name="OptionCrate" type="CharacterBody3D"]
collision_layer = 4
collision_mask = 2
script = ExtResource("2")

[node name="Crate" type="MeshInstance3D" parent="."]
transform = Transform3D(0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, 0, 0, 0)
mesh = ExtResource("1")

[node name="FasterButtonArea" type="Area3D" parent="."]
transform = Transform3D(0.4, 0, 0, 0, 0.4, 0, 0, 0, 0.4, 0, 0.268993, 0)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="FasterButtonArea"]
shape = SubResource("1")

[node name="AdvanceTrainButtonArea" type="Area3D" parent="."]
transform = Transform3D(0.4, 0, 0, 0, -0.4, 3.49691e-08, 0, -3.49691e-08, -0.4, 0, 0.0288923, 0)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="AdvanceTrainButtonArea"]
shape = SubResource("2")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.145684, 0)
shape = SubResource("3")

[node name="FasterButtonUI3D" parent="." instance=ExtResource("3")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.273273, 0)

[node name="AdvanceTrainButtonUI3D" parent="." instance=ExtResource("4")]
transform = Transform3D(-1, -8.74228e-08, 3.82137e-15, 0, -4.37114e-08, -1, 8.74228e-08, -1, 4.37114e-08, 0, 0.0293154, 0)

[connection signal="body_entered" from="FasterButtonArea" to="." method="_on_FasterButtonArea_body_entered"]
[connection signal="body_entered" from="AdvanceTrainButtonArea" to="." method="_on_AdvanceTrainButtonArea_body_entered"]
